--- a/style.css
+++ b/style.css
@@ -115,9 +115,21 @@ p {
   
 /* Container media queries */
 
+@media (min-width: 500px) {
+  .container {
+    width: 400px;
+  }
+}
+
+
+@media (min-width: 800px) {
+  .container {
+    width: 600px;
+  }
+}
+
 @media (min-width: 1000px) {
   .container {
     width: 800px;
-    margin: auto;
   }
 }
